sys/v4l2/gstv4l2videodec.c
@@ -301,14 +301,17 @@ gst_v4l2_video_dec_flush (GstVideoDecoder * decoder)
 
   self->output_flow = GST_FLOW_OK;
 
+  gst_v4l2_object_unlock_stop (self->v4l2output);
+  gst_v4l2_object_unlock_stop (self->v4l2capture);
+
   if (self->v4l2output->pool)
     gst_v4l2_buffer_pool_flush (self->v4l2output->pool);
 
+  /* gst_v4l2_buffer_pool_flush() calls streamon the capture pool and must be
+   * called after gst_v4l2_object_unlock_stop() stopped flushing the buffer
+   * pool. */
   if (self->v4l2capture->pool)
     gst_v4l2_buffer_pool_flush (self->v4l2capture->pool);
-
-  gst_v4l2_object_unlock_stop (self->v4l2output);
-  gst_v4l2_object_unlock_stop (self->v4l2capture);
 
   return TRUE;
 }
